Allow illegal reflection from java.lang classes for Java 9+